--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 
 /* layer popup */
+html.is-open, html.is-open body {
+	touch-action:none;
+	-webkit-overflow-scrolling:none;
+	overflow:hidden;
+	overscroll-behavior:none;
+	height:auto;
+}
 .layer-popup-wrap {
     overflow: hidden;
     position: fixed;
