--- a/src/scss/contents.scss
+++ b/src/scss/contents.scss
@@ -25,264 +25,6 @@
 //공통영역은 contents.scss 스타일시트 작성
 @import "etc";				// 장애 + 기타
 
-/* layout */
-html {
-	&.is-open {
-		// overflow:hidden;
-		// height:auto;
-		touch-action: none;
-		-webkit-overflow-scrolling: none;
-		overflow: hidden;
-		overscroll-behavior: none;
-		body {
-			touch-action: none;
-			-webkit-overflow-scrolling: none;
-			overflow: hidden;
-			overscroll-behavior: none;
-		}
-	}
-	&.global-nav-open {
-		overflow:hidden;
-		height:auto;
-		body {
-			overflow:hidden;
-			height:auto;
-		}
-		#wrap {
-			#header {
-				height:100%;
-				// background-color:#000;
-				#globalNav {
-					.btn-global-nav {
-						&:after,
-						&:before {
-							left:15px;
-							width:17px;
-						}
-						&:before {
-							transform:rotate(45deg);
-						}
-						&:after {
-							transform:rotate(-45deg);
-						}
-					}
-					.global-nav-list {
-						visibility:visible;
-						transition-delay:0s;
-						li {
-							opacity:1;
-							@for $i from 1 through 10 {
-								&:nth-child(#{$i}) {
-									transition:opacity .5s cubic-bezier(0.32, 0.08, 0.24, 1) .1 + $i * .02s;
-								}
-							}
-						}
-					}
-				}
-				.my-bag {
-					transform:translateY(8px);
-					opacity:0;
-					visibility:hidden;
-					transition:transform 0.4s cubic-bezier(0.32, 0.08, 0.24, 1), opacity 0.3s cubic-bezier(0.32, 0.08, 0.24, 1),visibility 0s .7s;
-				}
-				.h-search-box {
-					visibility:visible;
-					opacity: 1;
-					transition:opacity .3s cubic-bezier(0.32, 0.08, 0.24, 1) .1s, transform .3s cubic-bezier(0.32, 0.08, 0.24, 1) .02s, visibility 0s 0s;
-				}
-			}
-		}
-	}
-}
-
-/* wrap */
-#wrap {
-	position:relative;
-	display:flex;
-	flex-direction:column;
-	width:100%;
-	min-height:100%;
-	/* header */
-	#header {
-		// position:fixed;
-		// top:0;
-		// left:0;
-		// overflow:hidden;
-		// width:100%;
-		// height:48px;
-		// background-color:rgba(0, 0, 0, .8);
-		// backdrop-filter:saturate(180%) blur(20px);
-		// transition:background .3s cubic-bezier(0.32, 0.08, 0.24, 1), height .6s cubic-bezier(0.32, 0.08, 0.24, 1);
-		// flex-shrink:0;
-		// z-index:10;
-		// -webkit-backface-visibility:hidden;
-		// -webkit-transform:translateZ(0);
-		// .logo {
-		// 	position:relative;
-		// 	display:flex;
-		// 	justify-content:center;
-		// 	height:48px;
-		// 	a {
-		// 		position:relative;
-		// 		display:block;
-		// 		width:48px;
-		// 		height:100%;
-		// 		z-index:2;
-		// 		background-image:url('https://www.apple.com/ac/globalnav/7/ko_KR/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_apple_image__b5er5ngrzxqq_small.svg');
-		// 		@include hideTxt(auto, auto);
-		// 	}
-		// }
-		.my-bag {
-			position:absolute;
-			top:0;
-			right:0;
-			width:48px;
-			height:48px;
-			z-index:2;
-			background-image:url('https://www.apple.com/ac/globalnav/7/ko_KR/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_bag_image__yzte50i47ciu_small.svg');
-			transition:transform 0.44s 0.2s cubic-bezier(0.32, 0.08, 0.24, 1), opacity 0.28s 0.36s cubic-bezier(0.32, 0.08, 0.24, 1);
-			@include hideTxt(auto, auto);
-		}
-		.h-search-box {
-			visibility:hidden;
-			position:relative;
-			display:flex;
-			width:100%;
-			padding:17px 10px;
-			opacity:0;
-			transform: translateY(-16px);
-			transition:visibility 0s 1s, opacity .4s cubic-bezier(0.32, 0.08, 0.24, 1) .15s, transform .5s cubic-bezier(0.32, 0.08, 0.24, 1) .1s;
-			z-index:3;
-			input {
-				flex:1;
-				height:36px;
-				padding:0 30px;
-				border:none;
-				background-color:#1d1d1f;
-				border-radius:8px;
-				color:#fff;
-				font-size:15px;
-			}
-			.cancel {
-				display:none;
-				margin-left:10px;
-				padding:0 8px;
-				color:#2997ff;
-				font-size:15px;
-			}
-		}
-		#globalNav {
-			position:absolute;
-			top:0;
-			left:0;
-			width:100%;
-			height:100%;
-			.btn-global-nav {
-				position:relative;
-				width:48px;
-				height:48px;
-				z-index:2;
-				@include hideTxt;
-				&:after,
-				&:before {
-					content:'';
-					position:absolute;
-					top:50%;
-					left:16px;
-					width:15px;
-					height:1px;
-					background-color:#fff;
-					transition:all .3s;
-				}
-				&:before {transform:translateY(-3px);}
-				&:after {transform:translateY(3px);}
-			}
-			.global-nav-list {
-				overflow-y:auto;
-				visibility:hidden;
-				position:absolute;
-				top:105px;
-				left:0;
-				right:0;
-				bottom:0;
-				padding:0 40px;
-				border-top:1px solid #424245;
-				transition:visibility 0s .5s;
-				// -webkit-backface-visibility:hidden;
-				// -webkit-transform:translateZ(0);
-				li {
-					opacity:0;
-					@for $i from 1 through 10 {
-						&:nth-child(#{$i}) {
-							transition:opacity .3s cubic-bezier(0.32, 0.08, 0.24, 1) .1 - $i * .015s;
-						}
-					}
-					&:first-child a {
-						margin-top:10px;
-					}
-					&:last-child a {
-						margin-bottom:10px;
-					}
-					a {
-						position:relative;
-						display:block;
-						border-top:1px solid #424245;
-						color:#eee;
-						font-size:16px;
-						line-height:44px;
-					}
-					&:first-child {
-						a {
-							border:none;
-						}
-					}
-				}
-			}
-		}
-		&.search-open {
-			.h-search-box {
-				background-color:#000;
-				transform:translateY(-48px) !important;
-				button {
-					display:block;
-				}
-			}
-		}
-	}
-	/* container */
-	#container {
-		flex:1 auto;
-		.contents {
-			overflow:hidden;
-			padding:0 20px;
-		}
-	}
-	/* footer */
-	#footer {
-		flex-shrink:0;
-		padding:30px 20px;
-		background-color:rgba(0, 0, 0, 0.8);
-		color:#fff;
-		font-size:11px;
-		line-height:18px;
-	}
-}
-
-/* accodian */
-.accodian-box {
-	overflow:hidden;
-	.accodian-box-inner {
-		background:green;
-		color:#fff;
-		@include acdo(0, -100vh, .4s, cubic-bezier(1, 0, 1, 1));
-	}
-	&.active {
-		.accodian-box-inner {
-			@include acdo(100%, 0, .3s, cubic-bezier(0, 0, 0, 1));
-		}
-	}
-}
-
 // tmp 임시
 .tmp-txt1 {
 	margin:20px 0;
@@ -312,6 +54,26 @@ html {
 		color:black;
 		font-size:20px;
 		font-weight:700;
+	}
+}
+.tmp-faq-list {
+	li {
+		display:flex;
+		flex-direction:column;
+		button {
+			height:50px;
+			padding:0 20px;
+			border:1px solid gray;
+			text-align:left;
+			@include ell;
+		}
+		&.active button {
+			background:gainsboro;
+		}
+		[data-box-type="accordion"] div {
+			padding:20px;
+			background-color:skyblue;
+		}
 	}
 }
 
