--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -57,7 +57,7 @@
 
     @each $key, $file in map-get($icon-size, "file") {
         &.#{$key} {
-            background-image: url(../images/icon/#{$file});
+            background-image: url($url-ico+$file);
         }
     }
 }
@@ -87,12 +87,13 @@
 
 // checkbook && radio
 @mixin form(
-	$type,
-	$before-shadow: if($type == checkbox, 0, 3px),
-	$border-radius: if($type == checkbox, 3px, 50%)
+	$type
+	// ,
+	// $before-shadow: if($type == checkbox, 0, 3px),
+	// $border-radius: if($type == checkbox, 3px, 50%)
 ) {
 	// size
-	$checkradio-size:              22px !default;
+	$checkradio-size:              26px !default;
 	// checked border color
 	$checkradio-border-primary:  #0d6efd  !default;
 	// shadow default color
@@ -101,8 +102,10 @@
 	$checkradio-shadow-primary:    $checkradio-border-primary  !default;
 	// disabled shadow color
 	$checkradio-shadow-disabled: #dee2e6  !default;
+
 	display:inline-block;
 	vertical-align:top;
+
 	input {
 		position:absolute;
 		width:1px;
@@ -112,24 +115,7 @@
 		overflow:hidden;
 		clip:rect(0,0,0,0);
 		border:0;
-		&:checked {
-			& + span {
-				&:before {
-					border-color:$checkradio-border-primary;
-					box-shadow:
-						0 0 0 calc($checkradio-size / 2) transparent,
-						inset 0 0 0 $before-shadow $checkradio-shadow-default,
-						inset 0 0 0 $checkradio-size $checkradio-shadow-primary;
-				}
-			}
-			&:disabled + span {
-				&:before {
-					box-shadow:
-						inset 0 0 0 $before-shadow $checkradio-shadow-disabled,
-						inset 0 0 0 $checkradio-size #adb5bd;
-				}
-			}
-		}
+		
 		&:disabled + span {
 			color:#adb5bd;
 			&:before {
@@ -138,6 +124,7 @@
 			}
 		}
 	}
+
 	span {
 		position:relative;
 		display:inline-flex;
@@ -150,32 +137,8 @@
 			width:$checkradio-size;
 			height:$checkradio-size;
 			margin-right:5px;
-			border:1px solid #979797;
-			border-radius:$border-radius;
-			background-color: #979797;
-			// box-shadow:
-			// 	0 0 0 -2px $checkradio-shadow-primary,
-			// 	inset 0 0 0 $checkradio-size $checkradio-shadow-default,
-			// 	inset 0 0 0 calc($checkradio-size / 2) $checkradio-shadow-primary;
-			transition:all .3s;
-			box-sizing:border-box;
 		}
 
-		@if $type == checkbox {
-			&:after {
-				content:"";
-				position:absolute;
-				top:0;
-				left:0;
-				border-right:calc($checkradio-size / 7) solid transparent;
-				border-bottom:calc($checkradio-size / 7) solid transparent;
-				transform-origin:100% 100%;
-				width:calc($checkradio-size / 5);
-				height:calc($checkradio-size / 2);
-				border-color:#fff;
-				transform:translate3d(calc($checkradio-size / 20), calc($checkradio-size / 8), 0) rotate(45deg);
-			}
-		}
 	}
 	&.no-label {
 		span {
@@ -183,15 +146,6 @@
 			line-height:0;
 			&:before {
 				margin: 0;
-			}
-		}
-	}
-
-	// check round
-	&.round{
-		span{
-			&:before{
-				border-radius: $border-radius-circle;
 			}
 		}
 	}
