--- a/src/components/layout01.html
+++ b/src/components/layout01.html
@@ -6,7 +6,13 @@
 <body>
 	<div id="wrap">
 		<!-- header -->
-@@include('@@webRoot/include/header.html', {type: "sub_01"})
+		<header id="header">
+			<div class="head-cont">
+				<div class="head-wrap">
+					@@include('@@webRoot/include/header.html', {type: "sub_01"})
+				</div>
+			</div>
+		</header>
 		<!-- //header -->
 		
 		<!-- container -->
