--- a/src/components/form.html
+++ b/src/components/form.html
@@ -19,8 +19,16 @@ h2{margin-bottom:20px;font-size:30px}
 				<!-- Checkbox -->
 				<div class="tmp-guide-box">
 					<h2 class="guide-box-tit">Checkbox</h2>
-					<label for="tmpCheckbook" class="gc-checkbox">
-						<input type="checkbox" id="tmpCheckbook" checked>
+
+					<label for="tmpCheckbook1" class="gc-checkbox round">
+						<input type="checkbox" id="tmpCheckbook1" checked>
+						<span>체크박스</span>
+					</label>
+
+					<br><br>
+
+					<label for="tmpCheckbook2" class="gc-checkbox">
+						<input type="checkbox" id="tmpCheckbook2" checked>
 						<span>체크박스</span>
 					</label>
 					<br><br>
