--- a/src/scss/_checkbox.scss
+++ b/src/scss/_checkbox.scss
@@ -3,4 +3,25 @@
 /* checkbox */
 .gc-checkbox {
 	@include form(checkbox);
+
+	&:not(.round){
+				
+	}
+
+	&.round{
+		input{
+			& + span{
+				&:before{
+					background-image: url(#{$url-common}check_round_off.svg);
+				}
+			}
+			&:checked {
+				& + span {
+					&:before {
+						background-image: url(#{$url-common}check_round_on.svg);
+					}
+				}
+			}
+		}
+	}
 }
