--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -215,6 +215,7 @@ textarea {
 				height:65px;
 				justify-content: center;
 				align-items: center;
+				border-bottom:1px solid #D9D9D9;
 
 				.title{
 					width:100%;
