--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,6 +22,7 @@ $font-xl4: 32px !default;
 $red-060			: #d32828;
 $yellow-060			: #fed500;
 $pink-040			: #fd8484;
+$pink-060			: #eb6565;
 $orange-050			: #fd9f4d;
 $puple-040			: #a87df9;
 
