--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -212,16 +212,17 @@ textarea {
 			.head{
 				position:relative;
 				display: flex;
-				height:65px;
+				height:66px;
 				justify-content: center;
 				align-items: center;
 				border-bottom:1px solid #D9D9D9;
 
 				.title{
 					width:100%;
-					padding:0 44px;
+					padding:0 60px;
 					line-height:28px;
 					text-align:center;
+					@include ell;
 				}
 
 				.left{
