--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -77,6 +77,8 @@ $gray          : #636363;
 
 // border-radius
 $border-radius       : 8px;
+$border-radius-20    : 20px;
+$border-radius-50    : 50px;
 $border-radius-circle: 50%;
 
 
