--- a/src/components/icon.html
+++ b/src/components/icon.html
@@ -53,6 +53,10 @@
                     <div class="box a">
                         <ul>
 							<li>
+								<span class="icon"><i class="ico badge-g xl2"></i></span>
+								<span class="text">badge-g</span>
+							</li>
+							<li>
                                 <span class="icon"><i class="ico delete md"></i></span>
                                 <span class="text">delete</span>
                             </li>
