--- a/src/components/layout01.html
+++ b/src/components/layout01.html
@@ -6,13 +6,10 @@
 <body>
 	<div id="wrap">
 		<!-- header -->
-		<header id="header">
-			<div class="head-cont">
-				<div class="head-wrap">
-					@@include('@@webRoot/include/header.html', {type: "sub_01"})
-				</div>
-			</div>
-		</header>
+		@@include('@@webRoot/include/header.html', {
+			type: "sub_01",
+			title: "할인/적립"
+		})
 		<!-- //header -->
 		
 		<!-- container -->
