--- a/src/include/header.html
+++ b/src/include/header.html
@@ -24,13 +24,38 @@
 						<div class="head">
 							<div class="left">
 								<button type="button" class="btn-head">
-									<i class="ico back md"></i>
+									<i class="ico back lg"></i>
 								</button>
 							</div>
 							<h2 class="title">@@title</h2>
 							<div class="right">
 								<button type="button" class="btn-head">
-									<i class="ico home md"></i>
+									<i class="ico home lg"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</header>
+			}
+
+			@@if (type === "search"){
+			<!-- 뒤로가기 버튼 |  타이틀  | 세팅 버튼 -->
+			<header id="header">
+				<div class="head-cont">
+					<div class="head-wrap">
+						<div class="head search">
+							<div class="left">
+								<button type="button" class="btn-head">
+									<i class="ico back lg"></i>
+								</button>
+							</div>
+							<div class="search-field">
+								<input type="text">
+							</div>
+							<div class="right">
+								<button type="button" class="btn-head">
+									<i class="ico delete lg"></i>
 								</button>
 							</div>
 						</div>
