--- a/src/scss/_mixin.scss
+++ b/src/scss/_mixin.scss
@@ -188,9 +188,9 @@
 	}
 
 	&.type-bottom{
-		.layer-container{
-			// padding-bottom:74px;
-		}
+		// .layer-container{
+		// 	// padding-bottom:74px;
+		// }
 		.bot-btn-fix{
 			position:absolute;
 			left:0;
