--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -217,6 +217,24 @@ textarea {
 				align-items: center;
 				border-bottom:1px solid #D9D9D9;
 
+				&.search{
+					display:block;
+					padding:0 50px;
+
+					.search-field{
+						width:100%;
+						height:100%;
+						@include vDom();
+					}
+					input{
+						width:100%;
+						font-size:$font-xl;
+						color:$navy-070;
+						font-weight:500;
+						@include ell;
+					}
+				}
+
 				.title{
 					width:100%;
 					padding:0 60px;
