버튼 텝 타입 추가

--- a/src/components/tab.html
+++ b/src/components/tab.html
@@ -21,8 +21,8 @@
 
 			.tmp-guide-box{
 				flex:1;
-				width:360px;
-				flex-basis: 360px;
+				width:100%;
+				flex-basis: 100%;
 				max-width: 360px;
 				margin-right:40px !important;
 				box-sizing: border-box;
@@ -42,8 +42,19 @@
 
 						<!-- tab -->
 						<div class="tmp-guide-box">
-							<h2 class="guide-box-tit">Tab</h2>
+							<h2 class="guide-box-tit">Button Tab</h2>
 
+							<div class="btn-tab">
+								<div class="scroll-area">
+									<button type="button" class="btn line xs active">그린존 전체</button>
+									<button type="button" class="btn line xs">공항</button>
+									<button type="button" class="btn line xs">SRT/KTX/역</button>
+									<button type="button" class="btn line xs">지하철</button>
+									<button type="button" class="btn line xs">지하철</button>
+									<button type="button" class="btn line xs">지하철</button>
+									<button type="button" class="btn line xs">지하철</button>
+								</div>
+							</div>
 							
 						</div>
 	
