데이터 없을 때 추가

--- a/src/components/etc.html
+++ b/src/components/etc.html
@@ -61,9 +61,11 @@ h2{margin-bottom:20px;font-size:30px}
 				<!-- 말줄임 -->
 				<div class="tmp-guide-box">
 					<h2 class="guide-box-tit">Text</h2>
-					<div class="tmp-txt1">한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다한줄 말줄임 입니다.</div>
-					<div class="tmp-txt2">두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다두줄 말줄임 입니다.</div>
-					<div class="tmp-txt3">세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다세줄 말줄임 입니다.</div>
+					
+					<div class="no-data">
+						<p class="desc">표시할 내용이 없습니다</p>
+					</div>
+
 				</div>
 				<!-- //말줄임 -->
 
