--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -42,6 +42,7 @@ html.is-open, html.is-open body {
         width: 100%;
         max-height: 100%;
         background: #fff;
+		border-radius: $border-radius-20;
         .layer-header {
             max-height: 66px;
             padding: 20px;
@@ -92,6 +93,7 @@ html.is-open, html.is-open body {
             }
         }
         .layer-container {
+			border-radius: $border-radius-20 $border-radius-20 0 0;
             opacity: 1;
             transform: translateY(100%);
             transition: transform 0.5s;
@@ -101,33 +103,29 @@ html.is-open, html.is-open body {
     }
     // type Drag Bottom Sheet
     &.type-drag {
-        .layer-container {
-            max-height: none;
-            transform: translateY(calc(100% - 66px));
-        }
-        &.type-bottom {
-            height: 66px;
-            opacity: 1;
-            &.active {
-                height: 100%;
-                transition-delay: 0s;
-                &:before {
-                    opacity: 1;
-                    transition: opacity 0.3s cubic-bezier(0, 0, 0, 1);
-                }
-                .layer-container {
-                    transition: none;
-                }
-            }
-        }
+		.layer-container {
+			&:before {
+				content:'';
+				display:block;
+				width:86px;
+				height:6px;
+				background:#E8ECEF;
+				border-radius:3px;
+				margin:10px auto;
+			}
+			.layer-header {
+				margin-top:-10px;
+			}
+		}
     }
     // full size
     &.type-full {
         padding: 0;
         .layer-container {
-            height: 100%;
             display: flex;
             flex-direction: column;
+            height: 100%;
+			border-radius: 0;
             .layer-header {
                 flex: 0 0 auto;
 				padding:0;
