--- a/src/components/etc.html
+++ b/src/components/etc.html
@@ -173,18 +173,7 @@
 	<div class="layer-popup-wrap type-bottom type-drag" id="tmpLayer03">
 		<div class="layer-container">
 			<!-- layer contents in -->
-			<div class="layer-body">
-				차량예약
-			</div>
-			<div class="layer-footer">
-				<div class="btn-wrap">
-					<div class="btn-group">
-						<button type="button" class="btn secondary lg">아니오</button>
-						<button type="button" class="btn primary lg">예약하기</button>
-					</div>
-				</div>
-			</div>
-			</div>
+			@@include('@@webRoot/html/reservation/SCR_GA_RV_0213_M01.html')
 			<!-- //layer contents in -->
 		</div>
 	</div>
